--- a/src/practice15/src/main/resources/application.properties
+++ b/src/practice15/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=practice14
-
-spring.jpa.database=postgresql
-spring.thymeleaf.prefix=classpath:/static/
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath*:database/init.sql
+spring.application.name=practice15
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username= postgres
+spring.datasource.password= ""
+spring.datasource.driver-class-name= org.postgresql.Driver
