--- a/src/practice19/src/main/resources/application.properties
+++ b/src/practice19/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=practice16
 spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username= postgres
-spring.datasource.password= ""
+spring.datasource.password= postgres
 spring.datasource.driver-class-name= org.postgresql.Driver
