--- a/src/practice21/src/main/resources/application.properties
+++ b/src/practice21/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=practice21
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=""
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
